--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,132 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+
+*{
+  color: pink;
+  font-family: 'Open Sans', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+
+  margin: 0;
+  padding: 0;
+}
+
+.App{
+
+  background-color: #343541;
+  display: flex;
+  
+}
+
+.side-bar{
+
+  background-color: #202123;
+  height: 100vh;
+  width: 244px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+
+}
+
+button{
+
+  border: solid 0.5px rgba(255, 255, 255, 0.5);
+  background-color: transparent;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+
+
+}
+
+nav{
+
+  border-top: solid 0.5px rgba(255, 255, 255, 0.5);
+  padding: 10px;
+  margin: 10px; 
+
+
+}
+
+.history { 
+
+  padding: 10px;
+  margin: 10px; 
+
+  height: 100%;
+
+}
+
+.history li{
+
+  list-style-type: none;
+  /* 15 top and bottom, 0 let and right -- shorthand */
+  padding: 15px 0;
+  cursor: pointer;
+}
+
+.main{
+
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+
+}
+
+.info{
+
+  color: rgb(255, 255, 255, .5);
+  font-size: 11px;
+  padding: 10px;
+
+
+}
+
+.input-container{
+  /* //needed to position child */
+  position: relative;
+  width: 100%;
+  max-width: 650px;
+
+
+
+}
+
+input{
+
+  width: 100%;
+  border: none;
+  font-size: 20px;
+  background: rgba(255, 255, 255, 0.5);
+  padding: 12px 15px;
+  border-radius: 5px;
+  box-shadow:rgba(0, 0, 0, 0.5) 0 54px 55px, rgba(0, 0, 0, 0.5) 0 -12px 30px, rgba(0, 0, 0, 0.5) 0 4px 6px, rgba(0, 0, 0, 0.5) 0 12px 3px, rgba(0, 0, 0, 0.5) 0 -3px 5px; 
+}
+
+input:focus{
+  outline: none;
+}
+
+#submit {
+
+  position: absolute;
+
+  bottom: 15px;
+  right: 0px;
+  cursor: pointer;
+}
+
+.bottom-section{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+   
 }
